--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
         <button>Home</button>
     </div>
     <div class="button">
-        <input type="name" placeholder="Username">
-        <input type="password" placeholder="Password">
-        <input type="submit">
+        <div class="user">
+            <input type="name" placeholder="Username">
+            <input type="password" placeholder="Password">
+        </div>
+        <div class="submit">
+            <input type="submit">
+        </div>
     </div>
     <div class="pic">
         <img src="" alt="">
