--- a/index.html
+++ b/index.html
@@ -6,30 +6,41 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello World</h2>
-    <p>Register Here</p>
-    <div class="menu">
+    <div class="text">
+        <h1>Hello World</h2>
+        <p>Register Here</p>
+    </div>
+    <div class="home">
         <button>Home</button>
     </div>
+
     <div class="button">
+
         <div class="user">
             <input type="name" placeholder="Username">
             <input type="password" placeholder="Password">
         </div>
+
         <div class="submit">
             <input type="submit">
         </div>
+
     </div>
-    <div class="pic">
-        <img src="" alt="">
+
+    <div class="flex-container">
+        <a href="https://www.instagram.com/midfiel_d">IG</a>
+        <nav>
+            <a href="https://www.youtube.com/@Fieldly32">Youtube</a>
+        </nav>
     </div>
-    <nav>
-        <a href="https://www.w3schools.com/tags/tag_nav.asp">youtube</a>
-    </nav>
+    
     <footer>
-        <p>Created by: 
-            <a href="https://www.instagram.com/midfiel_d">Midfield</a>
-        </p>
+        <p>Created by: Midfield</p>
       </footer>
+
+      <div class="pic">
+        <img src="https://img-comment-fun.9cache.com/media/an1O4xz/aBoWWPea_700w_0.jpg" alt="">
+    </div>
+
 </body>
 </html>
