--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <nav>
             <a href="https://www.youtube.com/@Fieldly32">Youtube</a>
         </nav>
+        <a href="lab14.html">Lab14 Here</a>
     </div>
     
     <footer>
