--- a/lab14.html
+++ b/lab14.html
@@ -27,12 +27,12 @@
             <div class="phone">
                 <h1>Phone Number List</h1>
             </div>
-            <div class="insert">
+            <div class="inserttable">
                 <div>
                     <input type="text" placeholder="Name" style="width: 250px;" id="phonename">
                     <input type="text" placeholder="Tel" style="width: 250px;" id="phonenumber">
                     <button onclick="addphone()">Add</button>
-                    <button>Export</button>
+                    <button onclick="exported()">Export</button>
                 </div>
                 <table id="table">
                     <thead>
@@ -84,19 +84,19 @@
             phonetel.value = '';
             num = num+1;
         };
+        function exported(){
+            const csvContent = phonenumber.map(row => row.join(",")).join("\n"); // Convert array to CSV string
+            const blob = new Blob([csvContent], { type: "text/csv;charset=utf-8;" });
+            const link = document.createElement("a");
+            const url = URL.createObjectURL(blob);
+            link.setAttribute("href", url);
+            link.setAttribute("download", "data.csv");
+            link.style.visibility = "hidden";
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
+        };
     </script>
 </body>
 
 </html>
-<!-- function saveCSV() {
-    const csvContent = phonenumber.map(row => row.join(",")).join("\n"); // Convert array to CSV string
-        const blob = new Blob([csvContent], { type: "text/csv;charset=utf-8;" });
-        const link = document.createElement("a");
-        const url = URL.createObjectURL(blob);
-        link.setAttribute("href", url);
-        link.setAttribute("download", "data.csv");
-        link.style.visibility = "hidden";
-        document.body.appendChild(link);
-        link.click();
-        document.body.removeChild(link);
-}; -->
